--- a/app/config/eccube/packages/eccube.yaml
+++ b/app/config/eccube/packages/eccube.yaml
@@ -82,10 +82,12 @@ parameters:
     eccube_csv_import_delimiter: ,
     eccube_csv_import_enclosure: '"'
     eccube_csv_import_escape: \
+    #eccube_link_url: 'http://beta.ssvsports.work/'
     eccube_info_url: 'https://www.ec-cube.net/info/4/'
     eccube_owners_store_url: '%env(ECCUBE_OWNERS_STORE_URL)%'
     eccube_official_site_url: http://ec-cube.vn
     eccube_community_site_url: https://www.facebook.com/groups/eccube.vn/
+    eccube_link_ssvsport: http://beta.ssvsports.work/
     eccube_document_url: http://docs.ec-cube.vn/
     eccube_name_len: 20
     eccube_kana_len: 25
