--- a/app/config/eccube/packages/eccube_nav.yaml
+++ b/app/config/eccube/packages/eccube_nav.yaml
@@ -51,6 +51,9 @@ parameters:
                 customer_company:
                     name: admin.customer.company_registration
                     url: admin_company_new
+                customer_company_list:
+                    name: admin.customer.company_list
+                    url: admin_company
         content:
             name: admin.content.contents_management
             icon: fa-file-text-o
